--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "inquire": "^0.4.8",
     "uuid": "^8.3.2"
   },
   "keywords": [],
