--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "note-taker",
   "version": "1.0.0",
-  "description": "",
+  "description": "11 Express.js: Note Taker",
   "main": "server.js",
   "scripts": {
     "test": "jest",
@@ -9,13 +9,17 @@
   },
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.19.2",
     "inquire": "^0.4.8",
+    "node": "^18.20.2",
+    "save": "^2.9.0",
+    "server.js": "^1.0.0",
     "uuid": "^8.3.2"
   },
   "keywords": [],
   "author": "",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0"
   }
 }
