--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "11 Express.js: Note Taker",
   "main": "server.js",
+  "express": "^4.17.1"
   "scripts": {
     "test": "jest",
     "start": "node server.js"
@@ -16,6 +17,7 @@
     "save": "^2.9.0",
     "server.js": "^1.0.0",
     "uuid": "^8.3.2"
+  
   },
   "keywords": [],
   "author": "",
